--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 		"files.eol": "\r\n",
 		"terminal.integrated.shell.linux": "/bin/bash",
 		"editor.tabSize": 2,
-		"terminal.integrated.scrollback": 2000,
+		"terminal.integrated.scrollback": 2000
 	},
 	// Codespaces extensions to be consumed
 	"extensions": [
